[gd_scene load_steps=14 format=3 uid="uid://bavbmldfp60bs"]

[ext_resource type="Script" path="res://scripts/multiDrone.gd" id="1_33ol0"]
[ext_resource type="Texture2D" uid="uid://dcqswqs3uy6yf" path="res://sprites/game/DroneSpin.png" id="2_gn5o5"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_psqdy"]
light_mode = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_05mhg"]
radius = 7.16667
height = 23.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6eqj8"]
radius = 9.0
height = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q8yn4"]
radius = 9.33333

[sub_resource type="Animation" id="Animation_u16p6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_whqfq"]
resource_name = "swayLeft"
length = 2.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(-2, -2, -2, 1),
"update": 0,
"values": [0.383972, -0.383972, 0.383972, 0.0]
}

[sub_resource type="Animation" id="Animation_dit3g"]
resource_name = "swayRight"
length = 2.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(-2, -2, -2, 1),
"update": 0,
"values": [-0.383972, 0.383972, -0.383972, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xqufd"]
_data = {
"RESET": SubResource("Animation_u16p6"),
"swayLeft": SubResource("Animation_whqfq"),
"swayRight": SubResource("Animation_dit3g")
}

[sub_resource type="Animation" id="Animation_0edpx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_knhdh"]
resource_name = "Split"
length = 1.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"split"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_06l3m"]
_data = {
"RESET": SubResource("Animation_0edpx"),
"Split": SubResource("Animation_knhdh")
}

[node name="Drone" type="Node2D"]
light_mask = 3
z_index = -1
texture_filter = 1
material = SubResource("CanvasItemMaterial_psqdy")
position = Vector2(0, 18)
scale = Vector2(0.75, 0.75)
script = ExtResource("1_33ol0")

[node name="Drone" type="Sprite2D" parent="."]
light_mask = 3
use_parent_material = true
position = Vector2(0, -17.3333)
texture = ExtResource("2_gn5o5")
offset = Vector2(0, 31.3333)
hframes = 8

[node name="Eat" type="Area2D" parent="Drone"]
position = Vector2(0, 17.3333)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone/Eat"]
position = Vector2(0, 22.1667)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_05mhg")

[node name="PancakeFall" type="Area2D" parent="Drone"]
position = Vector2(0, 17.3333)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone/PancakeFall"]
position = Vector2(0, 23.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6eqj8")

[node name="ParachuteFall" type="Area2D" parent="Drone"]
position = Vector2(0, 17.3333)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone/ParachuteFall"]
position = Vector2(0, 10.6666)
shape = SubResource("CircleShape2D_q8yn4")

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xqufd")
}

[node name="Split" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_06l3m")
}
autoplay = "Split"

[connection signal="area_entered" from="Drone/Eat" to="." method="_on_eat_area_entered"]
[connection signal="area_entered" from="Drone/PancakeFall" to="." method="_on_pancake_fall_area_entered"]
[connection signal="area_entered" from="Drone/ParachuteFall" to="." method="_on_parachute_fall_area_entered"]
